# sem2_hw2

./: CMakeLists.txt  main.cpp
